--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: accelerator
 Type: Package
 Title: A Tidy Framework For Accelerometry
-Version: 0.4.0
-Date: 2023-11-10
+Version: 0.4.2
+Date: 2024-06-21
 Authors@R: c(person("Cristina", "Barón-Suárez",
                      role=c("aut","cre"),
                      email="cbaronsuarez@gmail.com "),
@@ -21,7 +21,7 @@ URL: https://github.com/EpiPHAAN/accelerator
 License: GPL 3.0
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.2
+RoxygenNote: 7.3.1
 Imports: 
     caTools,
     lubridate,
@@ -30,7 +30,8 @@ Imports:
     purrr,
     progress,
     tidyverse,
-    furrr
+    furrr,
+    assertthat
 Author: Cristina Barón-Suárez [aut, cre],
         Julia Wärnber [aut],
         Juan Carlos Benavente Marin [aut],
