--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,20 +22,23 @@ export(VPA_B1)
 export(VPA_B30s)
 export(VPA_Hildebrand_Child)
 export(ZIB)
+export(accelerometry2Intervals)
 export(aggregateByfileBIN)
 export(basicSummary)
 export(basicSummaryOfBouts)
 export(basicSummaryOfPartitions)
 export(bedGGIR)
-export(cercaElastico)
 export(cleanInvalidWhen)
 export(computeCalendars)
+export(computeIntervals)
 export(computeInvalidCalendars)
 export(computeInvalidCalendars_old)
 export(computeValidCalendars)
 export(connectOverDistance)
+export(connectOverDistanceV2)
 export(connectOverInterval)
 export(connectOverVariableDistance)
+export(criteriaGenerator)
 export(criterio2Interval)
 export(criterioBout)
 export(criterioENMO)
@@ -82,6 +85,8 @@ export(ggir2What)
 export(ggir2WhatV2)
 export(ggir2ts)
 export(infoGGIRmeta)
+export(intersectIntervals)
+export(interval2Dataframe)
 export(interval2criterio)
 export(intervalBED)
 export(intervalBEDNew)
@@ -96,6 +101,8 @@ export(invalidBedOfFirstDay)
 export(invalidDuration)
 export(isOn)
 export(list2df)
+export(measureInterval_01h)
+export(measureInterval_24h)
 export(nonWear)
 export(numCores)
 export(obtenerBouts)
@@ -106,6 +113,8 @@ export(part_dayNumber)
 export(part_weekday)
 export(plotOfIntervals)
 export(quantileForIntervals)
+export(readAccelerometryFromGGIR)
+export(searchByCriteria)
 export(seconds2Unit)
 export(summariseWhatByWhen)
 export(summaryBoutsByCalendar)
